project(echo-cpp)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
find_package(PkgConfig)
set( ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:/home/piotr/code/seastar/build/release" )
pkg_search_module(SEASTAR REQUIRED seastar)
#target_link_libraries(echo-cpp ${SEASTAR_LIBRARIES})
#target_include_directories(echo-cpp PUBLIC ${SEASTAR_INCLUDE_DIRS})

target_compile_options(echo-cpp PUBLIC ${SEASTAR_CFLAGS})
target_link_libraries(echo-cpp PUBLIC ${SEASTAR_LDFLAGS})
